Issue #52: added more layout tweaks and aligned customer ui with agent ui styling

--- a/var/httpd/htdocs/skins/Agent/default/css/ITSM.Agent.ConfigItem.Zoom.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/ITSM.Agent.ConfigItem.Zoom.css
@@ -99,6 +99,14 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
         margin-top: 4px;
     }
 
+    .FieldDisplayRow label,
+    .FieldDisplayRow p {
+        padding-left: 8px;
+        padding-right: 8px;
+        overflow-wrap: break-word;
+        line-height: 1.5em;
+    }
+
     .oooContentGrid label {
         color: #929292;
         text-shadow: 0 1px 0 #FAFAFA;
@@ -113,7 +121,7 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
         margin-bottom: 8px;
         margin-left: 24px;
         display: grid;
-        grid-template-columns: calc( 50% - 24px ) 1fr;
+        grid-template-columns: calc( 50% - 12px ) calc( 50% + 12px );
     }
 
     .SetDisplayValue > label,
